# secs

./: Cargo.toml  README.md
ecs_macro/: Cargo.toml
ecs_macro/src/: lib.rs
src/: command_buffer.rs  errors.rs  lib.rs  query.rs  resources.rs  system.rs  world.rs
src/components/: comp_pool.rs  component_manager.rs  mod.rs
src/entities/: entity_manager.rs  mod.rs
src/events/: mod.rs
src/tests/: mod.rs
