[package]
name = "secs"
version = "0.1.0"
edition = "2021"

[lib]
name = "secs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.58"
time = "0.3.36"
ecs_macro = { path = "ecs_macro" }
