[package]
name = "ecs_macro"
version = "0.1.0"
edition = "2021"

[lib]
name = "ecs_macro"
path = "src/lib.rs"
proc-macro = true



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.21"
syn = { version = "*", features = ["extra-traits"] }
proc-macro2 = "*"